kubernetes/test/aws-alb-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: monitoring-ingress
  namespace: monitoring
  annotations:
    # kubernetes.io/ingress.class: alb
    # alb.ingress.kubernetes.io/scheme: internet-facing
    # alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}]'
    # alb.ingress.kubernetes.io/target-type: ip
    # alb.ingress.kubernetes.io/subnets: subnet-0984fbcdca8678b52,subnet-0e87f786b9fc2e313,subnet-0ce5c79d1efc09a82
    nginx.ingress.kubernetes.io/rewrite-target: /
    # alb.ingress.kubernetes.io/healthcheck-path: "/"
    # alb.ingress.kubernetes.io/healthcheck-port: "traffic-port"
spec:
  ingressClassName: nginx
  rules:
    - host: grafana.demo.com
      http:
        paths:
          - path: /grafana
            pathType: Prefix
            backend:
              service:
                name: stack-grafana
                port:
                  number: 80
    - host: prometheus.demo.com
      http:
        paths:
          - path: /prometheus
            pathType: Prefix
            backend:
              service:
                name: prometheus-stack-kube-prom-prometheus
                port:
                  number: 9090
    - host: app.demo.com
      http:
        paths:
          - path: /app
            pathType: Prefix
            backend:
              service:
                name: test-app
                port:
                  number: 80
