kubernetes/test/backup.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: monitoring-ingress
  namespace: monitoring
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /grafana
            pathType: Prefix
            backend:
              service:
                name: stack-grafana
                port:
                  number: 80
          - path: /prometheus
            pathType: Prefix
            backend:
              service:
                name: prometheus-stack-kube-prom-prometheus
                port:
                  number: 9090
          - path: /app
            pathType: Prefix
            backend:
              service:
                name: test-app
                port:
                  number: 80
          - path: /images
            pathType: Prefix
            backend:
              service:
                name: test-app
                port:
                  number: 80
          - path: /favicon.ico
            pathType: Exact
            backend:
              service:
                name: test-app
                port:
                  number: 80
