kubernetes/test/nginx-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: test-app
  namespace: monitoring
spec:
  selector:
    app: test-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
