kubernetes/test/test-node.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test-node
  namespace: monitoring
  labels:
    app: test-node
spec:
  replicas: 1
  selector:
    matchLabels:
      app: test-node
  template:
    metadata:
      labels:
        app: test-node
    spec:
      containers:
        - name: nginx
          image: nginx:latest
          ports:
            - containerPort: 80
